<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:src="@drawable/logoformapro"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:contentDescription="@string/logo_du_centre"/>

    <!--  Email Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <!--  Password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="@string/mot_de_passe"/>

    <EditText
        android:id="@+id/et_mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:maxLines="1"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_10dp"
        android:textColor="#e30000"
        android:textStyle="bold" />

    <!-- Login button -->
    <Button android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/Connexion"
        android:onClick="onClick"/>

    <!-- Link to Registration Screen -->
    <TextView android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/creer_un_compte"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#0b84aa"
        android:onClick="onClick"/>

</LinearLayout>