<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/change_password"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/changer_votre_mot_de_passe"
        android:textColor="@color/greenformapro"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <!--  Email Label -->
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="@string/mot_de_passe_actuelle"/>

    <EditText
        android:id="@+id/act_mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <!--  Password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="@string/nouveau_mot_de_passe"/>

    <EditText
        android:id="@+id/nv_mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:maxLines="1"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />
    <!--  Repeat Password -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="Repeter le mot de passe"/>

    <EditText
        android:id="@+id/rep_nv_mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:maxLines="1"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />
    <!-- conserver button -->
    <Button android:id="@+id/btn_conserver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/conserver"
        android:onClick="onClick"/>

    <!-- reset button -->
    <Button android:id="@+id/btn_annuler"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/annuler"
        android:onClick="onClick"/>

</LinearLayout>