<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoformapro"
        android:id="@+id/imageView"
        android:contentDescription=""
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"/>
    <LinearLayout
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:onClick="onClick">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/call"/>

        <TextView
            android:text="@string/_216_29_215_715_personal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="0.99"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/hangout"
            android:contentDescription="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="UseCompoundDrawables"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/mail"
            android:contentDescription="" />

        <TextView
            android:text="@string/site_centre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="0.88"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/locate"
            android:contentDescription="@string/logo_du_centre" />

        <TextView
            android:text="@string/adresse_centre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="0.99"
            android:textAlignment="center"/>


    </LinearLayout>
    <!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            tools:context=".MainMap"/>

        <com.google.android.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:apiKey="Ou7AJChI1NV8vCpj21C0Cq8YnNMrB6YMgigu0GA"
            android:clickable="true"
            android:layout_below="@id/tv_location"/>


    </RelativeLayout>-->
</LinearLayout>