<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLighter"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/img_form"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/paiement"
                    android:contentDescription=""/>

                <TextView
                    android:id="@+id/txt_form"
                    android:layout_width="0dp"
                    android:text="@string/mes_paiement"
                    android:layout_weight="1.06"
                    android:layout_height="80dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:clickable="?attr/isLightTheme"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@android:drawable/ic_menu_view"
                    android:onClick=""/>
            </LinearLayout>

        </RelativeLayout>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/img_paiement"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/formation"/>

                <TextView
                    android:id="@+id/txt_paiement"
                    android:layout_width="0dp"
                    android:text="@string/mes_formation"
                    android:layout_weight="1.06"
                    android:layout_height="80dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:clickable="?attr/isLightTheme"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@android:drawable/ic_menu_view"
                    android:contentDescription=""
                    android:onClick=""/>
            </LinearLayout>

        </RelativeLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/img_attest"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/attestation"/>

                <TextView
                    android:id="@+id/txt_attest"
                    android:layout_width="0dp"
                    android:text="@string/mes_attestation"
                    android:layout_weight="1.06"
                    android:layout_height="80dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:clickable="?attr/isLightTheme"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@android:drawable/ic_menu_view"
                    android:onClick=""/>
            </LinearLayout>

        </RelativeLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="66dp"/>

    </LinearLayout>


</LinearLayout>